# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
include/: exprAST.hpp  lexer.hpp  main.hpp  parser.hpp
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
